card-page was refactored on 40%, were refactored: check-in, book, datepicker

--- a/src/blocks/bullet-list/bullet-list.pug
+++ b/src/blocks/bullet-list/bullet-list.pug
@@ -1,5 +1,6 @@
-mixin bullet-list() 
+mixin bullet-list({title}) 
   .bullet-list
+    span.block-title.block-title_margin-b-16 #{title}
     ul.bullet-list__ul
       li.bullet-list__li
         span.bullet-list__text
