--- a/src/blocks/expand-list/expand-list.pug
+++ b/src/blocks/expand-list/expand-list.pug
@@ -1,7 +1,7 @@
 mixin expand-list({title, className})
   .expand-list(class=className)
     label
-      span.expand-list__title #{title}
+      span.block-title.expand-list__title #{title}
       .expand-list__dropdown
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
