--- a/src/blocks/filter-date/filter-date.pug
+++ b/src/blocks/filter-date/filter-date.pug
@@ -1,5 +1,5 @@
 mixin filter-date({className, title})
   .filter-date
     label
-      span.filter-date__title #{title}
+      span.block-title #{title}
       input(type='text' placeholder="от и до" class=className readonly).filter-date__input#js-filter-date
