--- a/src/blocks/radio-buttons/radio-buttons.pug
+++ b/src/blocks/radio-buttons/radio-buttons.pug
@@ -1,6 +1,6 @@
 mixin radio-buttons({title}) 
   .radio-buttons
-    span.radio-buttons__title #{title}
+    span.block-title.block-title_margin-b-16 #{title}
     .radio-buttons__inputs
       label
         input(type="radio" name="radio")
