--- a/src/blocks/subscription/subscription.pug
+++ b/src/blocks/subscription/subscription.pug
@@ -1,6 +1,6 @@
 mixin subscription({title,placeholder, required})
 	label.subscription__title
-		span.subscription__title #{title}
+		span.block-title #{title}
 		input.subscription__input(
 			type='email' 
 			name='email'
