--- a/src/blocks/textField/textField.pug
+++ b/src/blocks/textField/textField.pug
@@ -1,6 +1,6 @@
 mixin textField({title, type, placeholder, required})
 	label.textfield
-		span.textfield__title #{title}
+		span.block-title #{title}
 		input.textfield__input(
 			type=type 
 			name=type
