--- a/src/blocks/block-title/block-title.scss
+++ b/src/blocks/block-title/block-title.scss
@@ -2,4 +2,12 @@
   text-transform: uppercase;
   font-family: 'MontserratBold', Arial, sans-serif;
   font-size: rem(12);
+  display: inline-block;
+  line-height: rem(15);
+  &_margin-b-16 {
+    margin-bottom: rem(16);
+  }
+  &_margin-b-20 {
+    margin-bottom: rem(20);
+  }
 }
