--- a/src/blocks/checkbox-buttons/checkbox-buttons.pug
+++ b/src/blocks/checkbox-buttons/checkbox-buttons.pug
@@ -1,19 +1,17 @@
 mixin checkbox-buttons({title})
   .checkbox-buttons
-    span.checkbox-buttons__title #{title}
+    span.block-title.block-title_margin-b-16 #{title}
     label.checkbox-buttons__item
       input(type='checkbox').checkbox-buttons__checkbox
       span.checkbox-buttons__custom-checkbox 
       span.checkbox-buttons__text Можно курить
-
     label.checkbox-buttons__item
       input(type='checkbox').checkbox-buttons__checkbox
       span.checkbox-buttons__custom-checkbox 
       span.checkbox-buttons__text Можно с питомцами
-
     label.checkbox-buttons__item
       input(type='checkbox').checkbox-buttons__checkbox
       span.checkbox-buttons__custom-checkbox 
-      span.checkbox-buttons__text   Можно пригласить гостей 
-                                    br
-                                    |(до 10 человек)
+      span.checkbox-buttons__text
+        |Можно пригласить гостей
+        |(до 10 человек)
