--- a/src/blocks/checkbox-buttons/checkbox-buttons.scss
+++ b/src/blocks/checkbox-buttons/checkbox-buttons.scss
@@ -10,7 +10,6 @@
     font-family: 'MontserratBold', Arial, sans-serif;
     font-size: rem(12);
     position: relative;
-    margin-bottom: rem(16);
   }
   &__item {
     margin-bottom: rem(10);
@@ -23,6 +22,8 @@
     display: inline-block;
     width: 20px;
     height: 20px;
+    min-width: 20px;
+    min-height: 20px;
     border: $border;
     border-radius: 4px;
     margin-right: rem(10);
@@ -30,6 +31,7 @@
   &__text {
     font-size: rem(14);
     color: $ds50;
+    white-space: pre;
   }
   input {
     display: none;
