--- a/src/blocks/masked-textfield/masked-textfield.pug
+++ b/src/blocks/masked-textfield/masked-textfield.pug
@@ -1,4 +1,4 @@
 mixin masked-textfield({title, type, placeholder,className})
 	label.masked-textfield
-		span.masked-textfield__title #{title}
+		span.block-title #{title}
 		input.masked-textfield__input(type=type placeholder=placeholder name=type class=className)
