--- a/src/blocks/review/review.scss
+++ b/src/blocks/review/review.scss
@@ -2,6 +2,7 @@
   &__head {
     display: flex;
     margin-bottom: rem(10);
+    line-height: rem(24);
   }
   &__name {
     @include MontBold;
@@ -22,12 +23,14 @@
     display: flex;
   }
   &__like {
-    margin-right: 10px;
+    margin-top: rem(5);
+    margin-right: 15px;
     margin-left: 5px;
   }
   &__text {
     font-size: rem(14);
     color: $ds75;
     white-space: pre;
+    line-height: rem(24);
   }
 }
