--- a/src/blocks/rich-list/rich-list.pug
+++ b/src/blocks/rich-list/rich-list.pug
@@ -1,5 +1,6 @@
-mixin rich-list() 
+mixin rich-list({title}) 
   .rich-list
+    span.block-title.block-title_margin-b-16 #{title}
     ul.rich-list__ul
       li.rich-list__li
         label.rich-list__item
