card-page was refactored totally

--- a/src/blocks/advantages/advantages.pug
+++ b/src/blocks/advantages/advantages.pug
@@ -2,18 +2,18 @@ mixin advantages()
   .advantages
     ul.advantages__ul 
       li.advantages__li
-        svg.advantages__svg
+        svg.advantages__svg(role='image' aria-label='emotion')
           use(xlink:href="#insert_emoticon")
         span.advantages__text
-          span.advantages__head 
+          span.advantages__head
             | Комфорт
-          span.advantages__description 
+          span.advantages__description
             | Шумопоглащающие стены
       li.advantages__li
-        svg.advantages__svg
+        svg.advantages__svg(role='image' aria-label='city')
           use(xlink:href="#location_city")
         span.advantages__text
-          span.advantages__head 
+          span.advantages__head
             | Удобство
-          span.advantages__description 
+          span.advantages__description
             | Окно в каждой из спален
