--- a/src/blocks/block-title/block-title.scss
+++ b/src/blocks/block-title/block-title.scss
@@ -4,6 +4,8 @@
   font-size: rem(12);
   display: inline-block;
   line-height: rem(15);
+  margin-bottom: rem(5);
+  white-space: pre-wrap;
   &_margin-b-16 {
     margin-bottom: rem(16);
   }
