--- a/src/blocks/checkbox-buttons/checkbox-buttons.pug
+++ b/src/blocks/checkbox-buttons/checkbox-buttons.pug
@@ -4,11 +4,13 @@ mixin checkbox-buttons({title})
     label.checkbox-buttons__item
       input(type='checkbox').checkbox-buttons__checkbox
       span.checkbox-buttons__custom-checkbox 
-      span.checkbox-buttons__text Можно курить
+      span.checkbox-buttons__text
+        | Можно курить
     label.checkbox-buttons__item
       input(type='checkbox').checkbox-buttons__checkbox
       span.checkbox-buttons__custom-checkbox 
-      span.checkbox-buttons__text Можно с питомцами
+      span.checkbox-buttons__text
+        | Можно с питомцами
     label.checkbox-buttons__item
       input(type='checkbox').checkbox-buttons__checkbox
       span.checkbox-buttons__custom-checkbox 
