--- a/src/blocks/dropdown-choose/dropdown-choose.pug
+++ b/src/blocks/dropdown-choose/dropdown-choose.pug
@@ -1,4 +1,2 @@
 mixin dropdown-choose({className, title})
-  label 
-    span.block-title #{title}
-    div(class=className)
+  div(class=className aria-label='Выбор количества' tabindex=3)
