--- a/src/blocks/radio-buttons/radio-buttons.scss
+++ b/src/blocks/radio-buttons/radio-buttons.scss
@@ -10,6 +10,7 @@
   }
   label {
     display: inline-flex;
+    align-items: center;
     margin-right: rem(20);
     &:last-child {
       margin-right: 0;
