--- a/src/blocks/review/review.pug
+++ b/src/blocks/review/review.pug
@@ -7,7 +7,8 @@ mixin review({src: path})
         .review__date 5 дней назад
     .review__content
       +like-button({className: 'review__like', count: 11})
-      p.review__text
-        | Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. 
-        | И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто
-        | не жаловался из соседей.
+      article.reiview__article
+        p.review__text
+          | Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. 
+          | И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто
+          | не жаловался из соседей.
