--- a/src/blocks/card-book/card-book.scss
+++ b/src/blocks/card-book/card-book.scss
@@ -4,6 +4,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   max-width: 380px;
+  min-width: 380px;
   &__content {
     padding: 40px 30px 30px 30px;
   }
@@ -12,7 +13,7 @@
     justify-content: space-between;
     align-items: flex-end;
     @include MontBold;
-    margin-bottom: rem(15);
+    margin-bottom: rem(20);
     line-height: rem(17);
   }
   &__block {
@@ -83,7 +84,7 @@
   }
   &__calc-total {
     @include MontBold;
-    margin-bottom: rem(30);
+    margin-bottom: rem(25);
   }
   &__total-price {
     margin-left: auto;
