--- a/src/blocks/card-selection/card-selection.scss
+++ b/src/blocks/card-selection/card-selection.scss
@@ -8,13 +8,12 @@
     padding: 40px 30px 30px;
   }
   &__title {
-    font-family: 'OpenSansBold', Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    @include MontBold;
     font-size: 24px;
-    line-height: 30px;
+    line-height: rem(29);
     text-transform: initial;
     display: inline-block;
-    margin-bottom: rem(15);
+    margin-bottom: rem(20);
   }
   &__block {
     &_margin-b-15 {
