--- a/src/blocks/checkbox-buttons/checkbox-buttons.scss
+++ b/src/blocks/checkbox-buttons/checkbox-buttons.scss
@@ -1,6 +1,6 @@
 .checkbox-buttons {
   display: block;
-  max-width: 250px;
+  max-width: 222px;
   user-select: none;
   cursor: pointer;
 
@@ -31,7 +31,8 @@
   &__text {
     font-size: rem(14);
     color: $ds50;
-    white-space: pre;
+    white-space: pre-wrap;
+    line-height: rem(18);
   }
   input {
     display: none;
