--- a/src/blocks/expand-list/expand-list.pug
+++ b/src/blocks/expand-list/expand-list.pug
@@ -6,41 +6,49 @@ mixin expand-list({title, className})
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
           span.expand-list__custom-checkbox 
-          span.expand-list__text Завтрак
+          span.expand-list__text
+            | Завтрак
 
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
           span.expand-list__custom-checkbox 
-          span.expand-list__text Письменный стол
+          span.expand-list__text
+            | Письменный стол
 
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
           span.expand-list__custom-checkbox 
-          span.expand-list__text Стул для кормления
+          span.expand-list__text
+            | Стул для кормления
 
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
           span.expand-list__custom-checkbox 
-          span.expand-list__text Кроватка
+          span.expand-list__text
+            | Кроватка
 
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
           span.expand-list__custom-checkbox 
-          span.expand-list__text Телевизор
+          span.expand-list__text
+            | Телевизор
 
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
           span.expand-list__custom-checkbox 
-          span.expand-list__text Шампунь
+          span.expand-list__text
+            | Шампунь
 
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
           span.expand-list__custom-checkbox 
-          span.expand-list__text Телевизор
+          span.expand-list__text
+            | Телевизор
 
         label.expand-list__item
           input(type='checkbox').expand-list__checkbox
           span.expand-list__custom-checkbox 
-          span.expand-list__text Шампунь
+          span.expand-list__text
+            | Шампунь
         
         
