--- a/src/blocks/expand-list/expand-list.scss
+++ b/src/blocks/expand-list/expand-list.scss
@@ -37,13 +37,13 @@
       max-height: 1000px;
     }
     label {
-      display: flex;
-      align-items: center;
       line-height: 1;
     }
   }
   &__item {
     margin-bottom: rem(10);
+    display: flex;
+    align-items: flex-start;
     &:last-child {
       margin-bottom: 0;
     }
@@ -52,6 +52,8 @@
     display: inline-block;
     width: 20px;
     height: 20px;
+    min-width: 20px;
+    min-height: 20px;
     border: $border;
     border-radius: 4px;
     margin-right: rem(10);
@@ -59,6 +61,8 @@
   &__text {
     font-size: rem(14);
     color: $ds50;
+    line-height: rem(18);
+    white-space: pre-wrap;
   }
   input {
     display: none;
