--- a/src/blocks/rate-buttons/rate-buttons.pug
+++ b/src/blocks/rate-buttons/rate-buttons.pug
@@ -3,39 +3,39 @@ mixin rate-buttons()
     label.rate-buttons__label
       input(type="checkbox").rate-buttons__input
       .rate-buttons__star
-        svg.rate-buttons__svg
+        svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg
+        svg.rate-buttons__svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star").rate-buttons__star
       
     label.rate-buttons__label
       input(type="checkbox").rate-buttons__input
       .rate-buttons__star
-        svg.rate-buttons__svg
+        svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg
+        svg.rate-buttons__svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star").rate-buttons__star
 
     label.rate-buttons__label
       input(type="checkbox").rate-buttons__input
       .rate-buttons__star
-        svg.rate-buttons__svg
+        svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg
+        svg.rate-buttons__svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star").rate-buttons__star
 
     label.rate-buttons__label
       input(type="checkbox").rate-buttons__input
       .rate-buttons__star
-        svg.rate-buttons__svg
+        svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg
+        svg.rate-buttons__svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star").rate-buttons__star
 
     label.rate-buttons__label
       input(type="checkbox").rate-buttons__input
       .rate-buttons__star
-        svg.rate-buttons__svg
+        svg.rate-buttons__svg(role='image' aria-label='rate-star')
           use(xlink:href="#star_border").rate-buttons__star
-        svg.rate-buttons__svg.rate-buttons__svg_hidden
+        svg.rate-buttons__svg.rate-buttons__svg_hidden(role='image' aria-label='rate-star')
           use(xlink:href="#star").rate-buttons__star
