--- a/src/blocks/toggle-buttons/toggle-buttons.scss
+++ b/src/blocks/toggle-buttons/toggle-buttons.scss
@@ -30,7 +30,7 @@
   &__label {
     display: inline-flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     cursor: pointer;
   }
   &__checkbox {
@@ -73,5 +73,8 @@
   }
   &__subtitle {
     color: $ds75;
+    font-size: rem(14);
+    line-height: rem(18);
+    white-space: pre-wrap;
   }
 }
