--- a/src/pages/cards-page.pug
+++ b/src/pages/cards-page.pug
@@ -21,21 +21,38 @@ include ../blocks/review/review
 include ../blocks/card-selection/card-selection
 include ../blocks/card-book/card-book
 include ../blocks/card-checkin/card-checkin
+include ../blocks/card-singin/card-singin
+include ../blocks/card-room/card-room
 
 block content
-	svg.logo.logo_grey
+	svg.logo.logo_grey(role='image' aria-label='toxin logo')
 		use(xlink:href="#logo-gray")
-	.cards-page
+	main.cards-page
 		.container
-			.cards-page__content
+			.cards-page__content.js-cards-page__content
 				.cards-page__card
 					+card-selection()
-				.card-page__card
+				.cards-page__card
 					+card-book()
-				.card-page__card 
+				.cards-page__card 
 					.js-datepicker-inline
-				.card-page__card
+				.cards-page__card
+					+card-singin()
+				.cards-page__card
 					+card-checkin()
+				.cards-page__card
+					+card-room({src: ['room-2.jpg','room-2.jpg','room-2.jpg','room-2.jpg']})
+				.cards-page__card
+					+card-room({src: ['room-1.jpg','room-1.jpg','room-1.jpg','room-1.jpg']})
+				
+				
+				
+				
+				
+				
+				
+				
+				
 
 block script
 	script
