header was refactored

--- a/src/main.scss
+++ b/src/main.scss
@@ -193,3 +193,5 @@ section,
 @import './blocks/card-checkin/card-checkin';
 @import './blocks/card-singin/card-singin';
 @import './blocks/card-room/card-room';
+@import './blocks/headers&footers-page/headrs&footers-page';
+@import './blocks/header/header';
