--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -4,4 +4,11 @@
   left: 30px;
   max-width: rem(48);
   max-height: rem(48);
+  &_colored {
+    position: initial;
+    width: 100%;
+    height: 100%;
+    max-width: rem(40);
+    max-width: rem(105);
+  }
 }
