footers&headers-page was refactored

--- a/src/blocks/block-title/block-title.scss
+++ b/src/blocks/block-title/block-title.scss
@@ -6,6 +6,7 @@
   line-height: rem(15);
   margin-bottom: rem(5);
   white-space: pre-wrap;
+  color: $ds100;
   &_margin-b-16 {
     margin-bottom: rem(16);
   }
