--- a/src/main.scss
+++ b/src/main.scss
@@ -195,3 +195,4 @@ section,
 @import './blocks/card-room/card-room';
 @import './blocks/headers&footers-page/headrs&footers-page';
 @import './blocks/header/header';
+@import './blocks/footer/footer';
