--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,5 +1,5 @@
 mixin header({isEntered})
-  .header
+  header.header
     .container
       .header__content
         svg(class='logo logo_colored header__logo' role='image' aria-label='toxin logo')
@@ -34,4 +34,35 @@ mixin header({isEntered})
           else 
             a(href='/mock-adress').header__cabinet
               | Юлий Цезарь
-        .header__burger(role='navigation' aria-label='menu')
+        .header__burger.js-header__burger(role='navigation' aria-label='menu')
+      
+      nav.header__nav.header__nav_dropdown.js-header__nav_dropdown
+          ul.header__list
+            li.header__list-item
+              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+                | О нас
+
+            li.header__list-item.header__list-item_dropdown
+              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+                | Услуги
+
+            li.header__list-item
+              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+                | Вакансии
+
+            li.header__list-item
+              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+                | Новости
+
+            li.header__list-item.header__list-item_dropdown
+              a.header__link(href='https://mock-adress' aria-label='информация о нас')
+                | Соглашения
+          if !isEntered
+            a(href='/mock-address').button.button_white.header__button
+              | Войти
+            br
+            a(href='/mock-address').button.header__button
+              | Зарегистрироваться
+          else 
+            a(href='/mock-adress').header__cabinet
+              | Юлий Цезарь
