--- a/src/pages/headers-&-footers.pug
+++ b/src/pages/headers-&-footers.pug
@@ -1,7 +1,9 @@
 extends ../main
 
 include ../blocks/textField/textField
+include ../blocks/subscription/subscription
 include ../blocks/header/header
+include ../blocks/footer/footer
 
 block content
 	svg.logo.logo_grey(role='image' aria-label='toxin logo')
@@ -12,6 +14,8 @@ block content
 				+header({isEntered: false})
 			.headers-footers__block
 				+header({isEntered: true})
+		.header-footers__block
+			+footer()
 
 
 block script
