--- a/src/blocks/date-dropdown/date-dropdown.scss
+++ b/src/blocks/date-dropdown/date-dropdown.scss
@@ -4,6 +4,9 @@
   user-select: none;
   display: flex;
   justify-content: space-between;
+  @media (max-width: $phoneWidth) {
+    max-width: 100%;
+  }
   &__title {
     text-transform: uppercase;
     font-size: rem(12);
@@ -29,6 +32,9 @@
     padding: 12px 15px;
     transition: $trFast;
     max-width: 150px;
+    @media (max-width: $phoneWidth) {
+      max-width: 125px;
+    }
     background-image: url('./assets/img/expand_more.jpg');
     background-repeat: no-repeat;
     background-position-x: 90%;
