--- a/src/blocks/datepicker/datepicker.scss
+++ b/src/blocks/datepicker/datepicker.scss
@@ -2,6 +2,9 @@
   min-width: 320px;
   font-family: 'Montserrat', Arial, sans-serif;
   font-size: rem(12);
+  @media (max-width: $phoneWidth) {
+    min-width: 280px;
+  }
   &--pointer {
     display: none;
   }
@@ -93,7 +96,10 @@
     }
   }
 }
-
+.datepicker--nav-title {
+  text-align: center;
+  @include MontBold;
+}
 .datepicker--cell.-range-from-.-selected- {
   border-radius: 50%;
   position: relative;
