--- a/src/blocks/dropdown-choose/dropdown-choose.scss
+++ b/src/blocks/dropdown-choose/dropdown-choose.scss
@@ -4,6 +4,7 @@
   font-size: rem(14);
   user-select: none;
   transition: $trFast;
+  position: relative;
   &:hover {
     border: $borderHover;
   }
@@ -43,12 +44,24 @@
     }
   }
   &__menu {
+    position: absolute;
     top: 100%;
     width: 100%;
+    z-index: 100;
     max-height: 0;
     overflow: hidden;
     transition: max-height $trFast;
+    background-color: #fff;
+    margin: -2px -1px -1px;
+    border: $borderHover;
+    border-bottom: none;
+    border-top: none;
+    border-bottom-left-radius: rem(4);
+    border-bottom-right-radius: rem(4);
+    width: calc(100% + 2px);
     &_active {
+      border-top: $borderHover;
+      border-bottom: $borderHover;
       max-height: 500px;
     }
   }
