--- a/src/blocks/expand-list/expand-list.scss
+++ b/src/blocks/expand-list/expand-list.scss
@@ -3,7 +3,7 @@
   max-width: 266px;
   user-select: none;
   cursor: pointer;
-
+  $self: &;
   &__title {
     display: block;
     font-size: rem(12);
@@ -23,17 +23,18 @@
       transition: $trFast;
     }
     &_active {
+      margin-bottom: rem(20);
       &:before {
         transform: rotate((225deg));
       }
     }
   }
   &__dropdown {
+    top: 100%;
     max-height: 0;
     overflow: hidden;
     transition: $trFast;
     &_active {
-      margin-top: rem(18);
       max-height: 1000px;
     }
     label {
