--- a/src/blocks/rich-list/rich-list.pug
+++ b/src/blocks/rich-list/rich-list.pug
@@ -16,7 +16,7 @@ mixin rich-list({title})
         label.rich-list__item
           input(type='checkbox').rich-list__checkbox
           span.rich-list__custom-checkbox 
-          span.rich-list__text 
+          div.rich-list__text 
             span.rich-list__head Помощник для инвалидов
             br
             span.rich-list__description
