--- a/src/blocks/rich-list/rich-list.scss
+++ b/src/blocks/rich-list/rich-list.scss
@@ -21,19 +21,15 @@
     border-radius: 4px;
     margin-right: rem(10);
   }
-  &__text {
-    line-height: 1.2;
-    display: block;
-  }
   &__head {
     @include MontBold;
     color: $ds75;
     text-transform: uppercase;
     font-size: rem(12);
     white-space: pre;
+    line-height: rem(18);
   }
   &__description {
-    @include Mont;
     font-size: rem(12);
     color: $ds50;
     line-height: rem(14);
