--- a/src/pages/Registration-page.pug
+++ b/src/pages/Registration-page.pug
@@ -2,21 +2,21 @@ extends ../main
 
 include ../blocks/header/header
 include ../blocks/footer/footer
+include ../blocks/masked-textfield/masked-textfield
+include ../blocks/toggle-buttons/toggle-buttons
 include ../blocks/subscription/subscription
-include ../blocks/card-selection/card-selection
+include ../blocks/textField/textField
+include ../blocks/radio-buttons/radio-buttons
+include ../blocks/card-checkin/card-checkin
 include ../blocks/date-dropdown/date-dropdown
 include ../blocks/dropdown-choose/dropdown-choose
 
 block content
   +header({isEntered: false})
-  .landing-page
+  .registration-page
     .container
-      main.landing-page__main
-        +card-selection()
-    .container
-      p.landing-page__description
-        | Лучшие номера для вашей работы,
-        | отдыха и просто вдохновения
+      main.registration-page__main
+        +card-checkin()
   +footer()
 
 
