--- a/src/pages/Singin-page.pug
+++ b/src/pages/Singin-page.pug
@@ -3,20 +3,18 @@ extends ../main
 include ../blocks/header/header
 include ../blocks/footer/footer
 include ../blocks/subscription/subscription
-include ../blocks/card-selection/card-selection
+include ../blocks/textField/textField
+include ../blocks/radio-buttons/radio-buttons
+include ../blocks/card-singin/card-singin
 include ../blocks/date-dropdown/date-dropdown
 include ../blocks/dropdown-choose/dropdown-choose
 
 block content
   +header({isEntered: false})
-  .landing-page
+  .singin-page
     .container
-      main.landing-page__main
-        +card-selection()
-    .container
-      p.landing-page__description
-        | Лучшие номера для вашей работы,
-        | отдыха и просто вдохновения
+      main.singin-page__main
+        +card-singin()
   +footer()
 
 
