--- a/src/blocks/svg-icons/svg-icons.scss
+++ b/src/blocks/svg-icons/svg-icons.scss
@@ -1,5 +1,5 @@
-#svg-icons {
-  opacity: 0;
-  height: 0;
-  overflow: hidden;
+.svg-icons {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
 }
