--- a/src/main.scss
+++ b/src/main.scss
@@ -206,3 +206,5 @@ section,
 @import './blocks/Registration-page/Registration-page';
 @import './blocks/Singin-page/Singin-page';
 @import './blocks/Filter-page/Filter-page';
+@import './blocks/Room-details/room-details';
+@import './blocks/circle-diagram/circle-diagram';
