--- a/src/blocks/Filter-page/Filter-page.scss
+++ b/src/blocks/Filter-page/Filter-page.scss
@@ -1,7 +1,15 @@
 .filter-page {
+  &__main {
+    border-bottom: 1px solid rgba(31, 32, 65, 0.25);
+  }
   &__content {
     padding: rem(30) 0 rem(70);
     display: flex;
+    @media (max-width: $smDesktopWidth) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
   }
   &__form {
     max-width: 266px;
@@ -32,8 +40,30 @@
   }
   &__rooms {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-row-gap: rem(20);
     grid-column-gap: rem(12);
+    @media (max-width: $desktopWidth) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    @media (max-width: $mdDesktopWidth) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media (max-width: $smDesktopWidth) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media (max-width: $phoneWidth) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  &__rooms-container {
+    text-align: center;
+  }
+  &__pagination {
+    display: flex;
+    justify-content: center;
+    margin: rem(40) 0 rem(70);
   }
 }
