--- a/src/blocks/advantages/advantages.pug
+++ b/src/blocks/advantages/advantages.pug
@@ -1,19 +1,12 @@
-mixin advantages()
+mixin advantages({items})
   .advantages
     ul.advantages__ul 
-      li.advantages__li
-        svg.advantages__svg(role='image' aria-label='emotion')
-          use(xlink:href="#insert_emoticon")
-        span.advantages__text
-          span.advantages__head
-            | Комфорт
-          span.advantages__description
-            | Шумопоглащающие стены
-      li.advantages__li
-        svg.advantages__svg(role='image' aria-label='city')
-          use(xlink:href="#location_city")
-        span.advantages__text
-          span.advantages__head
-            | Удобство
-          span.advantages__description
-            | Окно в каждой из спален
+      each val, index in items
+        li.advantages__li
+          svg.advantages__svg(role='image' aria-label='emotion')
+            use(xlink:href=items[index].href)
+          span.advantages__text
+            span.advantages__head
+              | #{items[index].title}
+            span.advantages__description
+              | #{items[index].description}
