--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -35,7 +35,8 @@ mixin header({isEntered})
             a(href='/mock-adress').header__cabinet
               | Юлий Цезарь
         .header__burger.js-header__burger(role='navigation' aria-label='menu')
-      
+    
+    .header__nav-shadow.js-header__nav-shadow
     nav.header__nav.header__nav_dropdown.js-header__nav_dropdown
         ul.header__list
           li.header__list-item
