--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -10,6 +10,21 @@
     padding-top: rem(15);
     padding-bottom: rem(15);
   }
+  &__nav-shadow {
+    position: absolute;
+    z-index: 900;
+    top: 100%;
+    right: 0;
+    width: 100%;
+    max-width: 0;
+    min-height: 100vh;
+    transition: 0.1;
+    background-color: rgba(185, 101, 185, 0.98);
+    &_active {
+      transition: $trMid;
+      max-width: 100%;
+    }
+  }
   &__nav {
     display: flex;
     align-items: center;
@@ -19,12 +34,12 @@
     }
     &_dropdown {
       overflow: hidden;
-      max-height: 0;
+      min-height: 100vh;
+      width: 100%;
       max-width: 0;
       transition: $trFast;
       position: absolute;
       background-color: $white;
-      box-shadow: -200px 0px 0px 0px rgba(185, 101, 185, 0.98);
       z-index: 1000;
       top: 100%;
       right: 0;
@@ -32,10 +47,7 @@
         display: block;
       }
       &-active {
-        display: block;
-        width: 100%;
         max-width: 80%;
-        min-height: 100vh;
       }
       #{$self}__list {
         display: block;
@@ -117,6 +129,9 @@
   &__button {
     margin-right: rem(20);
     padding: rem(10) rem(20);
+    @media (max-width: $smDesktopWidth) {
+      margin-right: 0;
+    }
     &:last-child {
       margin-right: 0;
     }
@@ -138,8 +153,6 @@
     z-index: 10;
     border-radius: rem(50);
     margin-left: rem(30);
-    animation-name: Fade;
-    animation-duration: 0.5s;
     &:after {
       content: '';
       display: block;
@@ -168,8 +181,6 @@
       border: 2px solid $purple;
       border-radius: 50%;
       transition: $trFast;
-      animation-name: Fade;
-      animation-duration: $trFast;
       &:after {
         transform: rotate(45deg);
         top: calc(50% - 1px);
