--- a/src/utils/utils-scss/mixins.scss
+++ b/src/utils/utils-scss/mixins.scss
@@ -9,58 +9,33 @@
   @return $pixels / $context * 1rem;
 }
 
-@mixin size($width,$height: $width) {
+@mixin size($width, $height: $width) {
   width: $width;
   height: $height;
 }
 
 @mixin placeholder {
-  ::-webkit-input-placeholder {@content}
-  :-moz-placeholder           {@content}
-  ::-moz-placeholder          {@content}
-  :-ms-input-placeholder      {@content}
-}
-
-
-// animation hover/focus on input/dropdown elements (start)
-@mixin borderInput {
-  border: 1px solid rgba(31,32,65,0.25);
-  box-sizing: border-box;
-  border-radius: 4px;
-}
-
-@mixin borderInputHover {
-  border: 1px solid rgba(31,32,65,0.5);
-  box-sizing: border-box;
-}
-
-@mixin borderAnimation {
-  @include borderInput;
-  &::placeholder {
-    color: $ds25;
-    transition: $trFast;
-    font-size: 14px;
+  ::-webkit-input-placeholder {
+    @content;
   }
-  &:hover {
-    @include borderInputHover;
-    &::placeholder {
-      color: $ds75;
-    }
+  :-moz-placeholder {
+    @content;
   }
-  &:focus {
-    @include borderInputHover;
-    &::placeholder {
-      color: $ds75;
-    }
+  ::-moz-placeholder {
+    @content;
+  }
+  :-ms-input-placeholder {
+    @content;
   }
 }
+
 // (end)
 
-// fonts 
+// fonts
 
 @mixin Mont {
-  font-family: "Montserrat", Arial, sans-serif;
+  font-family: 'Montserrat', Arial, sans-serif;
 }
 @mixin MontBold {
-  font-family: "MontserratBold", Arial, sans-serif;
+  font-family: 'MontserratBold', Arial, sans-serif;
 }
