--- a/src/utils/utils-scss/vars.scss
+++ b/src/utils/utils-scss/vars.scss
@@ -21,7 +21,7 @@ $smPhoneWidth: 320px;
 // $primary-color           : #444ce0;
 // $success-color           : #26de81;
 $danger-color: #fc5c65;
-// $warning-color           : #fed330;
+$warningColor: #fed330;
 // $light-color             : #999999;
 // $purple-color            : #8854d0;
 
