--- a/src/blocks/card-checkin/card-checkin.pug
+++ b/src/blocks/card-checkin/card-checkin.pug
@@ -1,7 +1,7 @@
 mixin card-checkin()
   .card-checkin
     .card-checkin__content
-      from.card-checkin__form
+      form.card-checkin__form
         fieldset
           legend
             h3.card-checkin__title
