--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -2,7 +2,7 @@ mixin header({isEntered})
   header.header
     .container
       .header__content
-        svg(class='logo logo_colored header__logo' role='image' aria-label='toxin logo')
+        svg(class='logo logo_colored header__logo' aria-label='toxin logo')
           use(xlink:href="#logo-colored")
         nav.header__nav
           ul.header__list
