--- a/src/pages/Room-details.pug
+++ b/src/pages/Room-details.pug
@@ -18,8 +18,8 @@ block content
     .room-details__room-photos
       img(src=require('../assets/img/room-d-1.jpg').default alt='Комната в отеле' class='room-details__main-photo room-details__photo')
       .room-details__another-photos
-        img(src=require('../assets/img/room-d-2.jpg').default alit='Комната в отеле' class='room-details__another-photo room-details__photo')
-        img(src=require('../assets/img/room-d-3.jpg').default alit='Комната в отеле' class='room-details__another-photo room-details__photo')
+        img(src=require('../assets/img/room-d-2.jpg').default alt='Комната в отеле' class='room-details__another-photo room-details__photo')
+        img(src=require('../assets/img/room-d-3.jpg').default alt='Комната в отеле' class='room-details__another-photo room-details__photo')
     .room-details__text-content
       .container
         main.room-details__main 
@@ -60,7 +60,7 @@ block content
                 src: 'maga.png',
                 name: 'Мурад Сарафанов',
                 date: '5 дней назад',
-                text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. \nИ стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто\nне жаловался из соседей.',
+                text: 'Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий.\nИ стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто\nне жаловался из соседей.',
                 like: 11
               })
               +review({
