--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -33,6 +33,7 @@
   }
   &__achivement {
     line-height: rem(24);
+    white-space: pre-wrap;
     @media (max-width: $smDesktopWidth) {
       display: none;
     }
@@ -62,6 +63,7 @@
   }
   &__subscribe-text {
     line-height: rem(24);
+    white-space: pre-wrap;
   }
   &__basement {
     border-top: 1px solid rgba(31, 32, 65, 0.1);
