--- a/src/blocks/review/review.pug
+++ b/src/blocks/review/review.pug
@@ -7,5 +7,5 @@ mixin review({src: path, name, date, text, like})
         .review__date #{date}
     .review__content
       +like-button({className: 'review__like', count: like})
-      article.reiview__article
+      .reiview__article
         p.review__text #{text}
